@@ -3,9 +3,10 @@ v4.0.3-git
 ----------
 
 [jan] Fix default task list in portal block (Bug #12133).
-[jan] Fix displaying of due dates of recurring events in basic list view.
+[jan] Fix displaying of due dates of recurring events in some views.
 [jan] Update broken rows due to migration bug in PostgreSQL (Bug #12101).
-[mjr] Fix uncompleting tasks from task view in smartmobile view (Bug #12098, <ctimoteo@sapo.pt>).
+[mjr] Fix uncompleting tasks from task view in smartmobile view
+      (ctimoteo@sapo.pt, Bug #12098).
 [jan] Include parent tasks in cost object labels.
 [jan] Only return completed tasks up to a week old as cost objects.
 [mjr] Set correct timezone on incoming ActiveSync tasks (Bug #12053).
